<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.destinyapp.mtb.Activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.destinyapp.mtb.Activity.ui.product.ProductFragment"
        android:label="@string/title_produk"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.destinyapp.mtb.Activity.ui.contact.ContactFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.destinyapp.mtb.Activity.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>