<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.ui.contact.Pager.AboutUsFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Legalitas"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="Izin Usaha:"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">
                        <TextView
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginRight="2dp"
                            android:text="Akte Pendirian"/>
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/akte_pendirian"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">
                        <TextView
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginRight="2dp"
                            android:text="Surat Keterangan Domisili"/>
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/surat_domisili"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">
                        <TextView
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginRight="2dp"
                            android:text=" SIUP"/>
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/siup"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">
                        <TextView
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginRight="2dp"
                            android:text=" NPWP"/>
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/npwp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">
                        <TextView
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginRight="2dp"
                            android:text="PKP"/>
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pkp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">
                        <TextView
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginRight="2dp"
                            android:text="API-U"/>
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/api_u"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">
                        <TextView
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginRight="2dp"
                            android:text="NPIK"/>
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/npik"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">
                        <TextView
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginRight="2dp"
                            android:text="BANK ACCOUNT"/>
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bank_account1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">
                        <TextView
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginRight="2dp"/>
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:background="@color/cardview_shadow_start_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bank_account2"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tim Kami"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Customer Kami"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>